--- a/views/company/edit.ejs
+++ b/views/company/edit.ejs
@@ -8,35 +8,35 @@
     <link rel="stylesheet" href="stylesCompany.css">
 </head>
 <body>
-    <h1>Editar <%= datosCompany.name %></h1>
+    <h1>Editar <%= datosCompany.name %></h1> <!-- Muestra -->
     <fieldset id="nav">
-        <a href="<%= BaseURL %>company">Inicio</a>
-        <a href="<%= BaseURL %>inscription">Inscripciones</a>
-        <a href="<%= BaseURL %>users">Usuarios</a>
+        <a href="<%= BaseURL %>company">Inicio</a> <!-- Enlace a index de emprtesa -->
+        <a href="<%= BaseURL %>inscription">Inscripciones</a> <!-- Enlace a index de inscription -->
+        <a href="<%= BaseURL %>users">Usuarios</a> <!-- Enlace a index de usuarios -->
     </fieldset><br>
 
-    <form action="<%= BaseURL %>company/<%= datosCompany._id %>?_method=PATCH" method="POST">
+    <form action="<%= BaseURL %>company/<%= datosCompany._id %>?_method=PATCH" method="POST"> <!-- Formulario de edicion -->
         <fieldset>
 
             <h3>DATOS GENERALES</h3>
             <label for="type">Tipo de empresa: </label>
-            <input type="text" name="type" value="<%= datosCompany.type %>">
+            <input type="text" name="type" value="<%= datosCompany.type %>"> <!-- Campo de tipo de empresa -->
 
             <h3>LOCALIZACIÓN</h3>
             <label for="ciudad">Ciudad: </label>
-            <input type="text" name="ciudad" value="<%= datosCompany.city %>"><br><br>
+            <input type="text" name="ciudad" value="<%= datosCompany.city %>"><br><br> <!-- Campo de ciudad -->
             <label for="provincia">Provincia</label>
-            <input type="text" name="provincia" value="<%= datosCompany.area %>"><br><br>
+            <input type="text" name="provincia" value="<%= datosCompany.area %>"><br><br> <!-- Campo de provincia -->
             <label for="postal">Código postal: </label>
-            <input type="number" name="postal" value="<%= datosCompany.postalCode %>"><br><br>
+            <input type="number" name="postal" value="<%= datosCompany.postalCode %>"><br><br> <!-- Campo de codigo postal -->
             <label for="direccion">Dirección: </label>
-            <input type="text" name="direccion" value="<%= datosCompany.address %>">
+            <input type="text" name="direccion" value="<%= datosCompany.address %>"> <!-- Campo de dirección -->
 
             <h3>CONTACTO</h3>
             <label for="tel">Teléfono: </label>
-            <input type="tel" name="tel" value="<%=datosCompany.phone%>"><br><br>
+            <input type="tel" name="tel" value="<%=datosCompany.phone%>"><br><br> <!-- Campo de telefono -->
             <label for="email">Correo electrónico: </label>
-            <input type="email" name="email" value="<%=datosCompany.email%>">
+            <input type="email" name="email" value="<%=datosCompany.email%>"> <!-- Campo de email -->
 
             <h3>DATOS DE ACTUALIZACIÓN</h3>
             <p>Fecha de creación: <%= datosCompany.createDate %></p>
@@ -45,7 +45,7 @@
             <%var mes = (fecha.getMonth()+1).toString();%>
             <%var dia = (fecha.getDate()).toString(); %>
             <%var anyo = (fecha.getFullYear()).toString(); %>
-            <input type="hidden" name="modifiedDate" value="<%= `${anyo}-${mes}-${dia}` %>" readonly>
+            <input type="hidden" name="modifiedDate" value="<%= `${anyo}-${mes}-${dia}` %>" readonly> <!-- Campo de fecha final -->
             
             <button>Enviar</button><br>
         </fieldset>
