--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -29,9 +29,9 @@
         <p>Modified Date: <%= datosUsuario.modifiedDate %></p> <!-- Muestra la fecha de modificación -->
         <p>ROL: <%= datosUsuario.profile %></p> <!-- Muestra el rol -->
         
-        <a href="<%= BaseURL %>users">Volver</a> <!-- Enlace para volver al index -->
+        <a href="<%= BaseURL %>users">Volver</a><br> <!-- Enlace para volver al index -->
         <a href="<%= BaseURL %>users/edit/<%= datosUsuario.idUser %>">Editar</a> <!-- Enlace para edit -->
-        <form action="<%= BaseURL %>users/<%= datosUsuario.idUser %>?_method=DELETE" method="POST"> <!-- Formulario para eliminar usuario -->
+        <form id="eliminar" <%= BaseURL %>users/<%= datosUsuario.idUser %>?_method=DELETE" method="POST"> <!-- Formulario para eliminar usuario -->
             <button>Eliminar</button> <!-- Botón para eliminar -->
         </form>
     </fieldset>
