--- a/public/stylesCompany.css
+++ b/public/stylesCompany.css
@@ -80,3 +80,16 @@ select{
     display: flex;
     justify-content: center;
 }
+
+ul{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#crearUsuario{
+    width: 100%;
+
+}
