--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -16,28 +16,30 @@
     </fieldset><br>
 
     <h2>ID: <%= datosUsuario.idUser %></h2>  <!-- Muestra la id del usuario -->
-            <a href="<%= BaseURL %>users/<%= c.idUser %>">Show Details</a> <!-- Campo de NIF -->
+    <a id="volver" href="<%= BaseURL %>users/<%= datosUsuario.idUser %>"> Volver </a><br> <!-- Campo de NIF -->
     <form action="<%= BaseURL %>users/<%= datosUsuario.idUser %>?_method=PATCH" method="POST"> <!-- Formulario de edicion -->
-        <label for="nif">NIF</label>
-        <input type="text" name="nif" value="<%= datosUsuario.nif %>" required readonly><br> <!-- Campo de NIF -->
-        
-        <label for="username">Username</label>
-        <input type="text" name="username" value="<%= datosUsuario.username %>" required><br> <!-- Campo de nombre de usuario -->
-        
-        <label for="firstName">First Name</label>
-        <input type="text" name="firstName" value="<%= datosUsuario.firstName %>" required><br> <!-- Campo de nombre -->
-        
-        <label for="lastName">Last Name</label>
-        <input type="text" name="lastName" value="<%= datosUsuario.lastName %>" required><br> <!-- Campo de apellido -->
-        
-        <label for="email">Email</label>
-        <input type="email" name="email" value="<%= datosUsuario.email %>" required><br> <!-- Campo de email -->
-        
-        <label>Profile: <%= datosUsuario.profile %></label> <!-- Tipo de perfil -->
-        
-        <br><br>
-        <button type="submit">Guardar</button>
-        <a href="<%= BaseURL %>users">Cancelar</a> <!-- Enlace para volver al index -->
+        <fieldset>
+            <label for="nif">NIF</label>
+            <input type="text" name="nif" value="<%= datosUsuario.nif %>" required readonly><br> <!-- Campo de NIF -->
+            
+            <label for="username">Username</label>
+            <input type="text" name="username" value="<%= datosUsuario.username %>" required><br> <!-- Campo de nombre de usuario -->
+            
+            <label for="firstName">First Name</label>
+            <input type="text" name="firstName" value="<%= datosUsuario.firstName %>" required><br> <!-- Campo de nombre -->
+            
+            <label for="lastName">Last Name</label>
+            <input type="text" name="lastName" value="<%= datosUsuario.lastName %>" required><br> <!-- Campo de apellido -->
+            
+            <label for="email">Email</label>
+            <input type="email" name="email" value="<%= datosUsuario.email %>" required><br> <!-- Campo de email -->
+            
+            <label>Profile: <%= datosUsuario.profile %></label> <!-- Tipo de perfil -->
+            
+            <br><br>
+            <button type="submit">Guardar</button><br>
+            <a href="<%= BaseURL %>users/<%= datosUsuario.idUser %>">Cancelar</a> <!-- Enlace para volver al index -->
+        </fieldset>
     </form>
 </body>
 </html>
