--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -16,33 +16,35 @@
     </fieldset><br>
 
     <form action="<%= BaseURL %>users" method="POST"> <!-- Formulario de actualizacion -->
-        <label for="nif">NIF</label>
-        <input type="text" name="nif" required><br> <!-- Campo de NIF -->
-        
-        <label for="username">Username</label>
-        <input type="text" name="username" required><br> <!-- Campo de nombre de usuario -->
-        
-        <label for="password">Password</label>
-        <input type="password" name="password" required><br> <!-- Campo de contraseña -->
-        
-        <label for="firstName">First Name</label>
-        <input type="text" name="firstName" required><br> <!-- Campo de nombre -->
-        
-        <label for="lastName">Last Name</label>
-        <input type="text" name="lastName" required><br> <!-- Campo de apellido -->
-        
-        <label for="email">Email</label>
-        <input type="email" name="email" required><br> <!-- Campo de email -->
-        
-        <label for="profile">Profile</label> <!-- Campo de perfil -->
-        <select name="profile" id="profile">
-            <option value="administrador">Administrador</option>
-            <option value="profesor">Profesor</option>
-            <option value="alumno">Alumno</option>
-        </select>
-        <br><br>
-        <button type="submit">Crear Usuario</button>
-        <a href="<%= BaseURL %>users">Cancelar</a> <!-- Enlace para volver al index -->
+        <fieldset>
+            <label for="nif">NIF</label>
+            <input type="text" name="nif" required><br> <!-- Campo de NIF -->
+            
+            <label for="username">Username</label>
+            <input type="text" name="username" required><br> <!-- Campo de nombre de usuario -->
+            
+            <label for="password">Password</label>
+            <input type="password" name="password" required><br> <!-- Campo de contraseña -->
+            
+            <label for="firstName">First Name</label>
+            <input type="text" name="firstName" required><br> <!-- Campo de nombre -->
+            
+            <label for="lastName">Last Name</label>
+            <input type="text" name="lastName" required><br> <!-- Campo de apellido -->
+            
+            <label for="email">Email</label>
+            <input type="email" name="email" required><br> <!-- Campo de email -->
+            
+            <label for="profile">Profile</label> <!-- Campo de perfil -->
+            <select name="profile" id="profile">
+                <option value="administrador">Administrador</option>
+                <option value="profesor">Profesor</option>
+                <option value="alumno">Alumno</option>
+            </select>
+            <br><br>
+            <button type="submit">Crear Usuario</button><br>
+            <a href="<%= BaseURL %>users">Cancelar</a> <!-- Enlace para volver al index -->
+        </fieldset>
     </form>
 </body>
 </html>
